# integrations

./: .env.example  .gitignore  README.md  docker-compose.yml  package-lock.json  package.json
anthropic/rust/: ADMIN_IMPLEMENTATION.md  BETA_FEATURES.md  BETA_IMPLEMENTATION_SUMMARY.md  COMPLETION_CHECKLIST.md  Cargo.toml  FILES_CREATED.txt  FILES_SUMMARY.txt  IMPLEMENTATION_SUMMARY.md  MODELS_BATCHES_IMPLEMENTATION.md  OBSERVABILITY_IMPLEMENTATION.md  README.md  SCAFFOLD_SUMMARY.md
anthropic/rust/examples/: basic_chat.rs  extended_thinking.rs  multi_turn.rs  observability_example.rs  pdf_analysis.rs  streaming.rs  tool_use.rs  vision.rs
anthropic/rust/src/: auth.rs  config.rs  error.rs  lib.rs  transport.rs
anthropic/rust/src/auth/: mod.rs
anthropic/rust/src/client/: mod.rs
anthropic/rust/src/config/: mod.rs
anthropic/rust/src/errors/: categories.rs  error.rs  mod.rs
anthropic/rust/src/fixtures/: mod.rs
anthropic/rust/src/mocks/: mod.rs
anthropic/rust/src/observability/: IMPLEMENTATION_STATUS.md  README.md  logging.rs  metrics.rs  mod.rs  tests.rs  tracing.rs
anthropic/rust/src/resilience/: circuit_breaker.rs  mod.rs  orchestrator.rs  rate_limiter.rs  retry.rs  tests.rs
anthropic/rust/src/services/: mod.rs
anthropic/rust/src/transport/: http_transport.rs  mod.rs
anthropic/rust/src/types/: mod.rs
aws/bedrock/rust/: Cargo.toml
aws/bedrock/rust/src/: lib.rs
aws/s3/rust/: Cargo.toml
aws/s3/rust/src/: lib.rs
aws/s3/rust/tests/: buckets_test.rs  multipart_test.rs  objects_test.rs  presign_test.rs  tagging_test.rs
aws/ses/rust/: Cargo.toml
aws/ses/rust/src/: client.rs  lib.rs
cohere/rust/: Cargo.toml
cohere/rust/src/: lib.rs
cohere/rust/src/auth/: mod.rs
cohere/rust/src/client/: mod.rs
cohere/rust/src/config/: mod.rs
cohere/rust/src/errors/: categories.rs  error.rs  mod.rs
cohere/rust/src/fixtures/: mod.rs
cohere/rust/src/mocks/: mod.rs
cohere/rust/src/observability/: logging.rs  metrics.rs  mod.rs  tracing_impl.rs
cohere/rust/src/resilience/: circuit_breaker.rs  mod.rs  orchestrator.rs  rate_limiter.rs  retry.rs
cohere/rust/src/services/: mod.rs
cohere/rust/src/transport/: http_transport.rs  mod.rs  sse.rs
cohere/rust/src/types/: mod.rs
cohere/rust/tests/: chat_tests.rs  embed_tests.rs  resilience_tests.rs
gemini/rust/: Cargo.toml  README.md  rustfmt.toml
gemini/rust/docs/: OBSERVABILITY.md
gemini/rust/examples/: basic.rs  cached_content.rs  embeddings.rs  files.rs  multimodal.rs  observability.rs  resilience.rs  safety_settings.rs  streaming.rs
gemini/rust/src/: lib.rs
gemini/rust/src/auth/: mod.rs
gemini/rust/src/client/: builder.rs  client.rs  mod.rs  traits.rs
gemini/rust/src/config/: mod.rs
gemini/rust/src/error/: categories.rs  mapper.rs  mod.rs  types.rs
gemini/rust/src/fixtures/: mod.rs
gemini/rust/src/mocks/: mod.rs
gemini/rust/src/observability/: logging.rs  metrics.rs  mod.rs  tracing.rs
gemini/rust/src/resilience/: circuit_breaker.rs  mod.rs  rate_limiter.rs  retry.rs
gemini/rust/src/services/: mod.rs
gemini/rust/src/streaming/: accumulator.rs  chunked_json.rs  mod.rs
gemini/rust/src/transport/: endpoints.rs  error.rs  http.rs  mod.rs  request.rs  reqwest.rs  response.rs
gemini/rust/src/types/: cached_content.rs  common.rs  content.rs  embeddings.rs  files.rs  generation.rs  mod.rs  models.rs  safety.rs  tools.rs
gemini/rust/tests/: cached_content_tests.rs  content_tests.rs  embeddings_tests.rs  error_tests.rs  files_tests.rs  mock_example.rs  models_tests.rs  resilience_tests.rs  streaming_tests.rs
github/rust/: Cargo.toml  GIT_DATA_API_REFERENCE.md  GIT_DATA_SERVICE_IMPLEMENTATION.md  GRAPHQL_IMPLEMENTATION.md  GRAPHQL_QUICK_REFERENCE.md  GRAPHQL_USAGE.md
github/rust/examples/: graphql_example.rs
github/rust/src/: lib.rs
github/rust/src/auth/: mod.rs
github/rust/src/client/: mod.rs
github/rust/src/config/: mod.rs
github/rust/src/errors/: mod.rs
github/rust/src/mocks/: mod.rs
github/rust/src/observability/: mod.rs
github/rust/src/pagination/: mod.rs
github/rust/src/resilience/: mod.rs
github/rust/src/services/: actions.rs  gists.rs  git_data.rs  graphql.rs  issues.rs  mod.rs  organizations.rs  pull_requests.rs  repositories.rs  search.rs  users.rs
github/rust/src/types/: mod.rs
github/rust/src/webhooks/: mod.rs
github/rust/tests/: graphql_tests.rs
google-drive/rust/: Cargo.toml  IMPLEMENTATION_SUMMARY.md
google-drive/rust/src/: lib.rs
google-drive/rust/src/auth/: mod.rs
google-drive/rust/src/client/: executor.rs  mod.rs
google-drive/rust/src/config/: mod.rs
google-drive/rust/src/errors/: mod.rs
google-drive/rust/src/pagination/: mod.rs
google-drive/rust/src/resilience/: mod.rs
google-drive/rust/src/services/: about.rs  changes.rs  comments.rs  drives.rs  files.rs  mod.rs  permissions.rs  replies.rs  revisions.rs  upload.rs
google-drive/rust/src/transport/: mod.rs
google-drive/rust/src/types/: mod.rs
groq/rust/: Cargo.toml
groq/rust/src/: lib.rs
groq/rust/src/auth/: mod.rs
groq/rust/src/client/: mod.rs
groq/rust/src/config/: mod.rs
groq/rust/src/errors/: mod.rs
groq/rust/src/mocks/: mod.rs
groq/rust/src/observability/: logging.rs  metrics.rs  mod.rs
groq/rust/src/resilience/: circuit_breaker.rs  mod.rs  rate_limit.rs  retry.rs
groq/rust/src/services/: audio.rs  chat.rs  mod.rs  models.rs
groq/rust/src/transport/: http.rs  mod.rs  streaming.rs
groq/rust/src/types/: audio.rs  chat.rs  common.rs  mod.rs  models.rs  tools.rs
oauth2/rust/: Cargo.toml
oauth2/rust/src/: client.rs  lib.rs
oauth2/rust/src/builders/: config.rs  (+1 more)
openai/rust/: Cargo.toml  QUICK_TEST_REFERENCE.md  README.md  SUMMARY.md  TESTING.md  TEST_SCAFFOLD_SUMMARY.md
openai/rust/examples/: chat_completion.rs  streaming.rs
openai/rust/src/: lib.rs
shared/database-rs/: Cargo.toml
shared/database-rs/src/: lib.rs
slack/rust/: Cargo.toml
slack/rust/src/: lib.rs
smtp/rust/: Cargo.toml  README.md
smtp/rust/examples/: attachments.rs  basic_send.rs  connection_pooling.rs  html_email.rs  oauth2_gmail.rs
smtp/rust/src/: lib.rs
(+3221 files in other folders)
