[package]
name = "integrations-cohere"
version = "0.1.0"
edition = "2021"
description = "Production-ready Cohere API client"
license = "LicenseRef-LLM-DevOps-Permanent"
repository = "https://github.com/integrations/cohere"
keywords = ["cohere", "command", "api", "llm", "ai", "embedding", "rerank"]
categories = ["api-bindings", "web-programming"]

[dependencies]
# Async runtime
tokio = { version = "1.35", features = ["macros", "rt-multi-thread", "time", "sync"] }
futures = "0.3"
async-trait = "0.1"
pin-project-lite = "0.2"
async-stream = "0.3"

# HTTP client
reqwest = { version = "0.11", default-features = false, features = ["json", "stream"] }
http = "0.2"

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Security
secrecy = { version = "0.8", features = ["serde"] }

# Observability
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["json", "env-filter"] }
parking_lot = "0.12"

# Utilities
bytes = "1.5"
thiserror = "1.0"
url = "2.5"
mime = "0.3"
base64 = "0.21"
chrono = { version = "0.4", features = ["serde"] }
rand = "0.8"
uuid = { version = "1.6", features = ["v4", "serde"] }
once_cell = "1.19"

[dev-dependencies]
tokio-test = "0.4"
mockall = "0.12"
wiremock = "0.6"
test-case = "3.3"
criterion = "0.5"
pretty_assertions = "1.4"

[features]
default = ["rustls"]
rustls = ["reqwest/rustls-tls"]
native-tls = ["reqwest/native-tls"]
datasets = []
connectors = []
finetune = []
full = ["datasets", "connectors", "finetune"]

[[bench]]
name = "embed"
harness = false

[[bench]]
name = "streaming"
harness = false
