[package]
name = "integrations-gemini"
version = "0.1.0"
edition = "2021"
authors = ["Integration Team"]
description = "Production-ready Rust client for the Google Gemini (Generative AI) API"
license = "MIT OR Apache-2.0"
repository = "https://github.com/your-org/integrations"
keywords = ["gemini", "google", "ai", "llm", "generative-ai"]
categories = ["api-bindings", "asynchronous"]

[dependencies]
# Async runtime
tokio = { version = "1", features = ["full"] }
futures = "0.3"
async-trait = "0.1"

# HTTP client
reqwest = { version = "0.11", features = ["json", "stream", "rustls-tls"], default-features = false }
bytes = "1"
url = "2"

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# Error handling
thiserror = "1"

# Security
secrecy = { version = "0.8", features = ["serde"] }

# Observability
tracing = "0.1"

# Utilities
base64 = "0.21"
mime = "0.3"
once_cell = "1.19"
uuid = { version = "1.6", features = ["v4"] }

[dev-dependencies]
tokio-test = "0.4"
wiremock = "0.5"
pretty_assertions = "1"
mockall = "0.11"
tempfile = "3"

[features]
default = []
# Enable all features
full = []

[[example]]
name = "basic_chat"
path = "examples/basic_chat.rs"

[[example]]
name = "streaming"
path = "examples/streaming.rs"

[[example]]
name = "multimodal"
path = "examples/multimodal.rs"

[[example]]
name = "function_calling"
path = "examples/function_calling.rs"

[[example]]
name = "embeddings"
path = "examples/embeddings.rs"

[lints.rust]
unsafe_code = "forbid"
missing_docs = "warn"

[lints.clippy]
# Correctness
correctness = "deny"

# Suspicious
suspicious = "warn"

# Style
style = "warn"

# Complexity
complexity = "warn"

# Performance
perf = "warn"

# Pedantic (selective)
pedantic = "warn"
must_use_candidate = "allow"
module_name_repetitions = "allow"

# Restriction (selective)
unwrap_used = "warn"
expect_used = "warn"
panic = "warn"
todo = "warn"
unimplemented = "warn"
dbg_macro = "warn"
print_stdout = "warn"
print_stderr = "warn"
