[package]
name = "integrations-github"
version = "0.1.0"
edition = "2021"
description = "Production-ready GitHub API client with full REST and GraphQL support"
license = "MIT"
repository = "https://github.com/integrations/github"
keywords = ["github", "api", "rest", "graphql", "async"]
categories = ["api-bindings", "web-programming"]

[features]
default = ["rustls-tls"]
rustls-tls = ["reqwest/rustls-tls"]
native-tls = ["reqwest/native-tls"]

[dependencies]
# Async runtime
tokio = { version = "1.35", features = ["full"] }

# HTTP client
reqwest = { version = "0.11", default-features = false, features = ["json", "gzip", "stream"] }

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_urlencoded = "0.7"

# Error handling
thiserror = "1.0"
anyhow = "1.0"

# Security
secrecy = { version = "0.8", features = ["serde"] }
hmac = "0.12"
sha2 = "0.10"
hex = "0.4"

# JWT for GitHub App authentication
jsonwebtoken = "9.2"

# Date/time
chrono = { version = "0.4", features = ["serde"] }

# URL handling
url = "2.5"

# Base64 encoding
base64 = "0.21"

# Bytes
bytes = "1.5"

# Async utilities
futures = "0.3"
async-trait = "0.1"

# Tracing
tracing = "0.1"

# UUIDs
uuid = { version = "1.6", features = ["v4"] }

[dev-dependencies]
tokio-test = "0.4"
wiremock = "0.5"
mockall = "0.12"
pretty_assertions = "1.4"
test-case = "3.3"
