[package]
name = "integrations-google-drive"
version = "0.1.0"
edition = "2021"
rust-version = "1.70"

[dependencies]
# Async runtime
tokio = { version = "1.35", features = ["full"] }

# HTTP client
reqwest = { version = "0.12", features = ["json", "stream", "multipart"] }

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_urlencoded = "0.7"

# Async traits
async-trait = "0.1"

# Error handling
thiserror = "1.0"

# Secret handling
secrecy = { version = "0.8", features = ["serde"] }

# URL handling
url = "2.5"

# Byte buffers
bytes = "1.5"

# Async streams
futures = "0.3"

# Date/time handling
chrono = { version = "0.4", features = ["serde"] }

# Base64 encoding
base64 = "0.21"

# JWT handling for Service Accounts
jsonwebtoken = "9.2"

# MIME type handling
mime = "0.3"

# URL encoding
percent-encoding = "2.3"

# Async utilities
tokio-util = { version = "0.7", features = ["io", "codec"] }

# Pin projection for streams
pin-project = "1.1"

# Tracing
tracing = "0.1"

# Random number generation (for retry jitter)
rand = "0.8"

[dev-dependencies]
tokio-test = "0.4"
wiremock = "0.6"
