[package]
name = "groq-client"
version = "0.1.0"
edition = "2021"
description = "A production-ready Rust client for the Groq API with ultra-low latency LPU inference"
license = "MIT OR Apache-2.0"
repository = "https://github.com/integrations/groq"
documentation = "https://docs.rs/groq-client"
readme = "README.md"
keywords = ["groq", "ai", "llm", "api", "async", "lpu"]
categories = ["api-bindings", "asynchronous"]

[dependencies]
# Async runtime
tokio = { version = "1.35", features = ["macros", "rt-multi-thread", "time", "sync"] }
futures = "0.3"
async-trait = "0.1"
async-stream = "0.3"
pin-project-lite = "0.2"

# HTTP client
reqwest = { version = "0.11", default-features = false, features = ["json", "stream", "multipart"] }
http = "0.2"

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Security
secrecy = { version = "0.8", features = ["serde"] }

# Observability
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["json", "env-filter"] }

# Utilities
bytes = "1.5"
thiserror = "1.0"
url = "2.5"
mime = "0.3"
base64 = "0.21"
chrono = { version = "0.4", features = ["serde"] }
rand = "0.8"
uuid = { version = "1.6", features = ["v4"] }
regex = "1.10"

[dev-dependencies]
tokio-test = "0.4"
mockall = "0.12"
wiremock = "0.6"
test-case = "3.3"
criterion = "0.5"
pretty_assertions = "1.4"

[features]
default = ["rustls"]
rustls = ["reqwest/rustls-tls"]
native-tls = ["reqwest/native-tls"]
full = []
mocks = []

[[bench]]
name = "chat_bench"
harness = false

[lints.rust]
unsafe_code = "forbid"
missing_docs = "warn"

[lints.clippy]
all = "warn"
pedantic = "warn"
unwrap_used = "deny"
expect_used = "deny"
