[package]
name = "oauth2-integration"
version = "0.1.0"
edition = "2021"
description = "OAuth2/OIDC authentication integration module"
license = "MIT"
repository = "https://github.com/example/integrations"
keywords = ["oauth2", "oidc", "authentication", "authorization"]
categories = ["authentication", "web-programming"]

[dependencies]
# Async runtime
tokio = { version = "1", features = ["full"] }
async-trait = "0.1"
futures = "0.3"

# HTTP client
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# URL handling
url = { version = "2", features = ["serde"] }

# Cryptography
sha2 = "0.10"
base64 = "0.22"
rand = "0.8"
ring = "0.17"

# Security
secrecy = { version = "0.8", features = ["serde"] }

# Date/time
chrono = { version = "0.4", features = ["serde"] }

# Error handling
thiserror = "1"

# JWT (optional for OIDC)
jsonwebtoken = { version = "9", optional = true }

# Tracing
tracing = "0.1"

[dev-dependencies]
tokio-test = "0.4"
mockall = "0.13"
wiremock = "0.6"

[features]
default = ["jwt"]
jwt = ["jsonwebtoken"]
