[package]
name = "integrations-openai"
version = "0.1.0"
edition = "2021"
rust-version = "1.70"
authors = ["Anthropic Engineering <engineering@anthropic.com>"]
license = "SEE LICENSE IN LICENSE"
description = "OpenAI integration module implementing standardized provider interface"
repository = "https://github.com/anthropics/integrations"
keywords = ["openai", "llm", "api", "integration"]
categories = ["api-bindings", "asynchronous"]

[dependencies]
# Async runtime
tokio = { version = "1.35", features = ["macros", "rt-multi-thread", "time", "sync"] }
futures = "0.3"
async-trait = "0.1"
pin-project-lite = "0.2"

# HTTP client
reqwest = { version = "0.11", default-features = false, features = ["json", "stream"] }

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Security
secrecy = { version = "0.8", features = ["serde"] }

# Utilities
bytes = "1.5"
thiserror = "1.0"
url = "2.5"
http = "0.2"
mime = "0.3"
base64 = "0.21"

[dev-dependencies]
tokio-test = "0.4"
mockall = "0.12"
wiremock = "0.6"
test-case = "3.3"
criterion = "0.5"
pretty_assertions = "1.4"

[features]
default = ["rustls"]
rustls = ["reqwest/rustls-tls"]
native-tls = ["reqwest/native-tls"]
full = ["assistants", "fine-tuning", "batches"]
assistants = []
fine-tuning = []
batches = []

[[bench]]
name = "chat_completion"
harness = false

[[bench]]
name = "embeddings"
harness = false
