[package]
name = "slack-client"
version = "0.1.0"
edition = "2021"
authors = ["Anthropic"]
description = "Production-ready Slack API client with resilience patterns and observability"
license = "MIT"
repository = "https://github.com/anthropics/integrations"
keywords = ["slack", "api", "messaging", "bot", "websocket"]
categories = ["api-bindings", "web-programming"]

[features]
default = ["rustls"]
rustls = ["reqwest/rustls-tls"]
native-tls = ["reqwest/native-tls"]
socket-mode = ["tokio-tungstenite", "futures-util"]
full = ["socket-mode"]

[dependencies]
# Async runtime
tokio = { version = "1.0", features = ["rt-multi-thread", "macros", "sync", "time"] }
async-trait = "0.1"
futures = "0.3"
futures-util = { version = "0.3", optional = true }

# HTTP client
reqwest = { version = "0.12", default-features = false, features = ["json", "multipart", "stream"] }
http = "1.0"
url = "2.5"
bytes = "1.5"

# WebSocket for Socket Mode
tokio-tungstenite = { version = "0.21", optional = true, features = ["rustls-tls-webpki-roots"] }

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Security
secrecy = { version = "0.8", features = ["serde"] }
hmac = "0.12"
sha2 = "0.10"
hex = "0.4"
constant_time_eq = "0.3"

# Error handling
thiserror = "1.0"

# Time and dates
chrono = { version = "0.4", features = ["serde"] }

# Utilities
mime = "0.3"
mime_guess = "2.0"
parking_lot = "0.12"
once_cell = "1.19"
uuid = { version = "1.6", features = ["v4"] }

# Tracing and observability
tracing = "0.1"

[dev-dependencies]
tokio = { version = "1.0", features = ["rt-multi-thread", "macros", "test-util"] }
tokio-test = "0.4"
wiremock = "0.6"
pretty_assertions = "1.4"
test-case = "3.3"
