[package]
name = "integrations-smtp"
version = "0.1.0"
edition = "2021"
description = "Production-ready SMTP client with connection pooling, TLS, and multiple authentication methods"
license = "MIT"
repository = "https://github.com/integrations/smtp"
keywords = ["smtp", "email", "mail", "tls", "async"]
categories = ["email", "network-programming", "asynchronous"]

[features]
default = ["rustls-tls"]
rustls-tls = ["tokio-rustls", "rustls", "webpki-roots"]
native-tls = ["tokio-native-tls", "dep:native-tls"]
tracing = ["dep:tracing"]
metrics = ["dep:opentelemetry"]

[dependencies]
# Async runtime
tokio = { version = "1.35", features = ["net", "io-util", "time", "sync", "rt-multi-thread", "macros"] }

# TLS
tokio-rustls = { version = "0.25", optional = true }
rustls = { version = "0.22", optional = true }
webpki-roots = { version = "0.26", optional = true }
tokio-native-tls = { version = "0.3", optional = true }
native-tls = { version = "0.2", optional = true }
rustls-pemfile = "2.0"

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Error handling
thiserror = "1.0"

# Security
secrecy = { version = "0.8", features = ["serde"] }

# Encoding
base64 = "0.21"
quoted_printable = "0.5"

# MIME
mime = "0.3"
mime_guess = "2.0"

# Time
chrono = { version = "0.4", features = ["serde"] }

# Crypto for CRAM-MD5
hmac = "0.12"
md-5 = "0.10"

# Async utilities
async-trait = "0.1"
futures = "0.3"
pin-project-lite = "0.2"

# Connection pool
deadpool = { version = "0.10", features = ["managed", "rt_tokio_1"] }

# Random for message IDs
uuid = { version = "1.6", features = ["v4"] }
rand = "0.8"

# Observability
tracing = { version = "0.1", optional = true }
opentelemetry = { version = "0.21", optional = true }

# DNS resolution
trust-dns-resolver = { version = "0.23", features = ["tokio-runtime"] }

[dev-dependencies]
tokio-test = "0.4"
mockall = "0.12"
rstest = "0.18"
tempfile = "3.9"
criterion = { version = "0.5", features = ["async_tokio"] }

[[bench]]
name = "smtp_benchmark"
harness = false
