[package]
name = "aws-bedrock"
version = "0.1.0"
edition = "2021"
description = "AWS Bedrock integration supporting Amazon Titan, Anthropic Claude, and Meta LLaMA model families"
license = "MIT"
repository = "https://github.com/your-org/integrations"
keywords = ["aws", "bedrock", "llm", "titan", "claude", "llama"]
categories = ["api-bindings", "asynchronous"]

[dependencies]
# Async runtime
tokio = { version = "1.35", features = ["full"] }
async-trait = "0.1"
async-stream = "0.3"
futures = "0.3"

# HTTP client
reqwest = { version = "0.11", features = ["json", "stream"] }
bytes = "1.5"
url = "2.5"

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# AWS Signature V4
hmac = "0.12"
sha2 = "0.10"
hex = "0.4"

# Time handling
chrono = { version = "0.4", features = ["serde"] }

# Error handling
thiserror = "1.0"

# Tracing and observability
tracing = "0.1"

# CRC for AWS Event Stream
crc32c = "0.6"

# Synchronization primitives
parking_lot = "0.12"

# UUID for embeddings
uuid = { version = "1.6", features = ["v4", "serde"] }

# URL encoding
urlencoding = "2.1"

[dev-dependencies]
tokio-test = "0.4"
mockall = "0.12"
wiremock = "0.5"
test-case = "3.3"

[features]
default = []
# Enable RuvVector (pgvector) integration for embeddings storage
ruvvector = []
# Enable simulation/replay for testing
simulation = []
