[package]
name = "aws-s3-integration"
version = "0.1.0"
edition = "2021"
description = "Production-ready AWS S3 integration with comprehensive API coverage"
license = "MIT"
authors = ["Integration Team"]
repository = "https://github.com/anthropics/integrations"
keywords = ["aws", "s3", "cloud", "storage"]
categories = ["api-bindings", "web-programming"]

[lib]
name = "aws_s3"
path = "src/lib.rs"

[features]
default = ["rustls-tls"]
native-tls = ["reqwest/native-tls"]
rustls-tls = ["reqwest/rustls-tls"]

[dependencies]
# Async runtime
tokio = { version = "1.35", features = ["full"] }
futures = "0.3"
async-trait = "0.1"
pin-project-lite = "0.2"

# HTTP client
reqwest = { version = "0.11", default-features = false, features = ["json", "stream", "gzip"] }
url = "2.5"
http = "0.2"
hyper = { version = "0.14", features = ["client", "http1", "http2", "stream"] }

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
quick-xml = { version = "0.31", features = ["serialize"] }

# Security and cryptography
ring = "0.17"
hmac = "0.12"
sha2 = "0.10"
md-5 = "0.10"
hex = "0.4"
base64 = "0.21"
secrecy = { version = "0.8", features = ["serde"] }
zeroize = { version = "1.7", features = ["derive"] }

# Date/time handling
chrono = { version = "0.4", features = ["serde"] }

# URL encoding
percent-encoding = "2.3"

# Bytes handling
bytes = "1.5"

# Error handling
thiserror = "1.0"
anyhow = "1.0"

# Tracing and logging
tracing = "0.1"
tracing-futures = "0.2"

# Utilities
once_cell = "1.19"
parking_lot = "0.12"
uuid = { version = "1.6", features = ["v4"] }

[dev-dependencies]
tokio-test = "0.4"
mockall = "0.12"
wiremock = "0.5"
tempfile = "3.9"
proptest = "1.4"
criterion = "0.5"
insta = "1.34"
test-case = "3.3"

[[bench]]
name = "signing"
harness = false

[[bench]]
name = "xml_parsing"
harness = false
